Update plugins & fix bugs